@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<aiscript name="jp.lib.MoveToSector" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="aiscripts.xsd">
+<aiscript name="jp.lib.MoveToPosition" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="aiscripts.xsd">
 
-   <order id="JP_lib_MoveToSector" name="{8888888, 41}" category="internal" infinite="false" allowinloop="false" canplayercancel="true">
+   <order id="JP_lib_MoveToPosition" name="{8888888, 42}" category="internal" infinite="false" allowinloop="false" canplayercancel="true">
       <params>
          <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-         <param name="SECTOR" type="internal" default="null"/>
-         <param name="POSITION" type="internal" default="null"/>
+         <param name="SECTOR"            type="internal" default="null"/>
+         <param name="POSITION"          type="internal" default="null"/>
+         <param name="USE_LOCAL_HIGHWAY" type="internal" default="this.ship.canenterhighway"/>
+         <param name="USE_TRAVEL_DRIVE"  type="internal" default="true"/>
+         <param name="FORCE_POSITION"    type="internal" default="true"/>
+         <param name="SKIP_SECTOR_CHECK" type="internal" default="false"/>
          <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
          <param name="debugchance" type="internal" default="0"/>
          <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
@@ -35,7 +39,7 @@
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
       <do_if value="$DEBUG gt 0">
          <set_value name="$_DebugFolderName" exact="@$_DefaultOrderParamRef.$DEBUG_FOLDER_NAME"/>
-         <set_value name="$_DebugScriptName" exact="'jp.lib.MoveToSector'"/>
+         <set_value name="$_DebugScriptName" exact="'jp.lib.MoveToPosition'"/>
          <set_value name="$_DebugFileName" exact="$_Ship.idcode + '.' + $_DebugScriptName + '.xml.log'"/>
       </do_if>
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
@@ -53,49 +57,18 @@
 
          <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
-         <label name="RESUME_LBL"/>
-         <wait exact="1ms"/>
-
-         <!-- Initially, we search for a path utilizing the blacklist. However, if we can't find a path, we disregard the blacklist. 
-              This is crucial to ensure that $_Ship can always reach its target sector. 
-              A stricter blacklist usage may be implemented in the future. -->
-
-         <set_command command="command.move" param="$SECTOR"/>
-         <set_command_action commandaction="commandaction.calculating"/>
-
-         <do_if value="$_Ship.sector != $SECTOR">
-            <include_interrupt_actions ref="GetBlacklistgroup"/>
-
-            <get_jump_path component="$_PathComponents" refobject="$_Ship" uselocalhighways="$_Ship.canenterhighway" useblacklist="$blacklistgroup" multiple="true">
-               <start object="$_Ship"/>
-               <end object="$SECTOR"/>
-            </get_jump_path>
-            <do_if value="$_PathComponents.count lt 2">
-               <get_jump_path component="$_PathComponents" refobject="$_Ship" uselocalhighways="$_Ship.canenterhighway" multiple="true">
-                  <start object="$_Ship"/>
-                  <end object="$SECTOR"/>
-               </get_jump_path>
-            </do_if>
-
-            <set_command_action commandaction="commandaction.flying"/>
-            <do_for_each name="$_PathComponent" in="$_PathComponents">
-               <move_to object="$_Ship" destination="$_PathComponent" travel="true" uselocalhighways="$_Ship.canenterhighway" finishonapproach="false">
-                  <interrupt>
-                     <conditions>
-                        <event_object_changed_sector object="$_Ship"/>
-                     </conditions>
-                  </interrupt>
-               </move_to>
-            </do_for_each>
-         </do_if>
-
-         <do_if value="@$POSITION != null and @$_Ship.distanceto.{@$POSITION} gt 1km">
-            <create_order id="'JP_lib_MoveToPosition'" object="$_Ship">
+         <do_if value="not $SKIP_SECTOR_CHECK and $_Ship.sector != $SECTOR">
+            <create_order object="$_Ship" id="'JP_lib_MoveToSector'" immediate="true">
                <param name="SECTOR" value="$SECTOR"/>
-               <param name="POSITION" value="$POSITION"/>
-               <param name="SKIP_SECTOR_CHECK" value="true"/>
             </create_order>
          </do_if>
+
+         <set_command command="command.move" param="$SECTOR"/>
+
+         <move_to destination="$SECTOR" object="$_Ship" forceposition="$FORCE_POSITION" travel="$USE_TRAVEL_DRIVE"
+                  uselocalhighways="$USE_LOCAL_HIGHWAY" flightbehaviour="flightbehaviour.default">
+            <position value="$POSITION"/>
+         </move_to>
 
          <set_command_action commandaction="commandaction.standingby"/>
 
