@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <icons>
-   <icon name="order_jp_lib_movetosector" texture="assets\fx\gui\textures\order\order_movetoobject.tga" height="32" width="32"></icon>
+   <icon name="order_jp_lib_movetosector" texture="assets\fx\gui\textures\order\order_movewait.tga" height="32" width="32"></icon>
+   <icon name="order_jp_lib_movethroughgate" texture="assets\fx\gui\textures\order\order_movewait.tga" height="32" width="32"></icon>
+   <icon name="order_jp_lib_movetoposition" texture="assets\fx\gui\textures\order\order_movewait.tga" height="32" width="32"></icon>
    <icon name="order_jp_lib_idlereturnhome" texture="assets\fx\gui\textures\order\order_wait.tga" height="32" width="32"></icon>
 </icons>
