@@ -33,8 +33,10 @@ for some of the translations
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~ -->
       <t id="30">Сектора без владельцев?</t>
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-      <t id="40">Простой</t>
-      <t id="41">Переместиться в Сектор</t>
+      <t id="40">В режиме ожидания</t>
+      <t id="41">Переместиться в сектор</t>
+      <t id="42">Переместиться в позицию</t>
+      <t id="43">Переместиться к объекту</t>
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~ -->
       <t id="50">В настоящее время нет доступных станций, где мы могли бы пополнить запасы желаемого оборудования.</t>
       <t id="51">В настоящее время все доступные станции не имеют необходимых ресурсов для производства нужного оборудования.\nЯ отправлюсь к ближайшей станции, сделаю запрос на пополнение запасов, а затем буду ждать следующее пополнение ресурсов.</t>
