@@ -32,6 +32,8 @@
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~ -->
       <t id="40">アイドル</t>
       <t id="41">セクターに移動</t>
+      <t id="42">位置に移動</t>
+      <t id="43">オブジェクトに移動</t>
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~ -->
       <t id="50">現在、希望の設備を補充できる利用可能なステーションはありません。</t>
       <t id="51">現在、全ての利用可能なステーションは必要な設備を製造するための必要なリソースが不足しています。\n最寄りのステーションに行き、補充を要求し、次のリソース補充を待つことにします。</t>
