@@ -30,8 +30,10 @@
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~ -->
       <t id="30">소유자 없는 섹터?</t>
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-      <t id="40">유휴</t>
+      <t id="40">대기 중</t>
       <t id="41">섹터로 이동</t>
+      <t id="42">위치로 이동</t>
+      <t id="43">객체로 이동</t>
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~ -->
       <t id="50">현재 우리가 원하는 장비를 보충할 수 있는 이용 가능한 역은 없습니다.</t>
       <t id="51">현재 모든 이용 가능한 역은 필요한 장비를 제조하기 위한 필요한 자원이 부족합니다.\n가장 가까운 역으로 가서 보충을 요청하고, 다음 자원 보충을 기다리겠습니다.</t>
