@@ -32,6 +32,8 @@
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~ -->
       <t id="40">空闲</t>
       <t id="41">移动到区域</t>
+      <t id="42">移动到位置</t>
+      <t id="43">移动到对象</t>
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~ -->
       <t id="50">目前，我们没有可以补充所需设备的可用站点。</t>
       <t id="51">目前，所有可用的站点都缺乏制造所需设备的必要资源。\n我将去最近的站点，提出补货请求，然后等待下次资源补充。</t>
