@@ -32,6 +32,8 @@
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~ -->
       <t id="40">空閒</t>
       <t id="41">移動到區域</t>
+      <t id="42">移動到位置</t>
+      <t id="43">移動到物件</t>
       <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~ -->
       <t id="50">目前，我們沒有可以補充所需設備的可用站點。</t>
       <t id="51">目前，所有可用的站點都缺乏製造所需設備的必要資源。\n我將去最近的站點，提出補貨請求，然後等待下次資源補充。</t>
